# lpc845-test-stand

./: README.md
firmware-lib/: Cargo.toml
firmware-lib/src/: pin_interrupt.rs  usart.rs
host-lib/src/: error.rs  pin.rs
lpc845-test-stand/messages/src/: lib.rs
lpc845-test-stand/test-assistant/: Cargo.toml
lpc845-test-stand/test-assistant/src/: main.rs
lpc845-test-stand/test-suite/src/: error.rs  lib.rs  target.rs  test_stand.rs
lpc845-test-stand/test-suite/tests/: assistant.rs  gpio.rs  i2c.rs  timer-interrupt.rs  usart.rs
lpc845-test-stand/test-target/: Cargo.toml
lpc845-test-stand/test-target/src/: main.rs
messages/src/: lib.rs
protocol/src/: pin.rs
simple-device-under-test/: Cargo.toml
simple-device-under-test/src/: main.rs
simple-unit-under-test/: Cargo.toml
simple-unit-under-test/src/: main.rs
stm32l4-test-stand/test-assistant/: Cargo.toml
test-assistant/: Cargo.toml  Embed.toml
test-assistant/src/: main.rs
test-stand-infra/firmware-lib/: Cargo.toml
test-stand-infra/firmware-lib/src/: lib.rs  pin_interrupt.rs  timer_interrupt.rs  usart.rs
test-stand-infra/firmware-lib/src/usart/: rx.rs
test-stand-infra/host-lib/src/: assistant.rs  conn.rs  error.rs  pin.rs  test_stand.rs
test-stand-infra/protocol/: Cargo.toml
test-stand-infra/protocol/src/: lib.rs  pin.rs
test-suite/: test-stand.toml
test-suite/src/: assistant.rs  error.rs  lib.rs  target.rs  test_stand.rs
test-suite/tests/: assistant.rs  gpio.rs  simple_dut.rs  spi.rs  timer-interrupt.rs
test-target/: Cargo.toml  Embed.toml
test-target/src/: main.rs
