[package]
name    = "firmware-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
heapless = "0.5.5"
nb       = "1.0.0"
postcard = "0.5.1"

[dependencies.lpc8xx-hal]
# TODO revert back to upstream dep once fully dynamic pins are merged
git      = "https://github.com/Lotterleben/lpc8xx-hal.git"
branch   = "new_test_api"
features = ["845"]

[dependencies.serde]
version          = "1.0.115"
default-features = false

[dependencies.void]
version          = "1.0.2"
default-features = false
